Hide unreliable grammar hints section

--- a/index.html
+++ b/index.html
@@ -705,10 +705,9 @@
         </div>
       </div>
 
-      <!-- Grammar Hints (shown before prompt in translate mode) -->
-      <div id="grammarHints" style="background: #e8f4e8; border: 2px solid #28a745; padding: 10px 15px; margin-bottom: 15px; font-size: 14px;">
-        <strong style="color: #28a745;">&#128161; You'll need:</strong>
-        <span id="hintsContent">verb "être" conjugated, greeting phrase</span>
+      <!-- Grammar Hints - HIDDEN (was showing unreliable hints) -->
+      <div id="grammarHints" style="display: none;">
+        <span id="hintsContent"></span>
       </div>
 
       <!-- Drill Content -->
